--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/au-gratin-potatoes.html">Au
+            Gratin Potatoes</a>
     </body>
 </html>
