--- a/recipes/au-gratin-potatoes.html
+++ b/recipes/au-gratin-potatoes.html
@@ -6,7 +6,9 @@
     <body>
         <h1>Au Gratin Potatoes</h1>
         <a href="../index.html">Home</a>
-        <img src="https://www.allrecipes.com/thmb/x7gMhV59Wm_yCQDPJYeEwU9JdJk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/219721-rich-and-creamy-potatoes-au-gratin-Beauty-3x4-1-c74165c1772e4e1987d65235e0e34d96.jpg" alt="Au Gratin Potatoes">
+        <hr>
+        <img src="https://www.allrecipes.com/thmb/x7gMhV59Wm_yCQDPJYeEwU9JdJk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/219721-rich-and-creamy-potatoes-au-gratin-Beauty-3x4-1-c74165c1772e4e1987d65235e0e34d96.jpg" alt="Au Gratin Potatoes"
+        width="400", height="300">
 
         <h2>Description</h2>
         <p>Au gratin potatoes are a French classic dish made by stacking thinly sliced potatoes in a baking dish, layering them with cheese and cream, and then baking until golden and bubbly. The dish is often topped with breadcrumbs for added texture.</p>
@@ -27,7 +29,7 @@
         <h2>Steps</h2>
         <ol>
             <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
-            <li>Place the potatoes, garlix, and salt into a large pot;with enough water to cover. Bring to a boil; reduce heat to medium and simmer potatoes until tender but not mushy, 8 to 10 minutes. Use a slotted spoon to transfer about half the potatoes into a 9x13-inch baking dish.</li>
+            <li>Place the potatoes, garlic, and salt into a large pot;with enough water to cover. Bring to a boil; reduce heat to medium and simmer potatoes until tender but not mushy, 8 to 10 minutes. Use a slotted spoon to transfer about half the potatoes into a 9x13-inch baking dish.</li>
             <li>Pour 1/2 of the cream over the potatoes and season with black pepper and nutmeg; sprinkle 1/2 of the Gruyère cheese on top. Layer the remaining potatoes on top and season with black pepper and nutmeg. Pour over remaining cream and sprinkle with remaining Gruyère cheese.</li>
             <li>Bake in the preheated oven until cheese is golden brown on top, about 1 hour.</li>
 
