feat: Add Ghanaian Waakye Recipe
    Add a new recipe for Waakye, a traditional Ghanaian dish.

    Corrected spelling errors in the following files:
    *../index.html
    *korean-beef.html
    *au-gratin-potatoes.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/au-gratin-potatoes.html">Au
-            Gratin Potatoes</a>
+        <p>Welcome to my recipe collection! Here, you'll find a variety of delicious recipes from different cuisines. Click on any recipe to view the details.</p>
+        <ol>
+            <li><a href="recipes/au-gratin-potatoes.html">Au Gratin Potatoes</a></li>
+            <li><a href="recipes/korean-beef.html">Korean Beef Bowl</a></li>
+            <li><a href="recipes/waakye.html">Ghanaian Waakye</a></li>  
+        </ol>
     </body>
 </html>
