--- a/recipes/au-gratin-potatoes.html
+++ b/recipes/au-gratin-potatoes.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Au Gratin Potatoes Recipe</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1>Au Gratin Potatoes</h1>
